# smells-code-analyzer

./: .gitignore  LICENSE  README.md  README.org  package-lock.json  package.json  tsconfig.json
.github/workflows/: npm-publish.yaml
sca-node/: README.md  logs.txt  package-lock.json  package.json
sca-node/src/: config.ts  filter-files.ts  lsp.ts  report.ts
sca-rust/: Cargo.toml  README.md
sca-rust/src/: config.rs  main.rs  model.rs  sanitize.rs
sca-rust/src/analyzer/: files.rs  lsp.rs  mod.rs  report.rs  tree.rs
src/: config.ts  index.ts  node-info.ts  report.ts  ts-analyzer.ts
