[package]
name = "sca"
version = "0.3.0"
edition = "2021"
license = "MIT"
authors = ["darkawower <artawower@protonmail.com>"]
description = "Smells Code Analyzer rewritten in Rust"
readme = "README.md"
repository = "https://github.com/Artawower/smells-code-analyzer"
keywords = ["cli", "analysis", "typescript", "tree-sitter", "lsp"]
categories = ["command-line-utilities", "development-tools"]

[dependencies]
anyhow = "1.0"
clap = { version = "4.4", features = ["derive"] }
encoding_rs = "0.8"
globset = "0.4"
ignore = "0.4"
lazy_static = "1.4"
lsp-types = "0.94"
once_cell = "1.18"
regex = "1.10"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "1.0"
tokio = { version = "1.34", features = ["macros", "rt-multi-thread", "process", "io-util", "fs", "sync", "time"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["fmt", "env-filter"] }
tree-sitter = "0.20"
tree-sitter-typescript = "0.20"
url = "2.4"

[dev-dependencies]
assert_cmd = "2.0"
insta = { version = "1.34", features = ["yaml"] }
tempfile = "3.8"
